# xcode-types

./: .gitignore  LICENSE  README  Setup.hs  xcode-types.cabal
src/Xcode/: Attribute.hs  CompatibilityVersion.hs  CompilerSpec.hs  ConfigurationList.hs  FileEncoding.hs  FileType.hs  Region.hs  SourceTree.hs  UUID.hs
src/Xcode/PBX/: AggregateTarget.hs  BuildPhase.hs  BuildRule.hs  FileReference.hs  Group.hs  NativeTarget.hs  ProductType.hs  Project.hs  Target.hs  TargetDependency.hs
