Name:                xcode-types
Version:             0.1
Synopsis:            Data types to represent Xcode projects
Homepage:            https://github.com/shlevy/xcode-types
License:             MIT
License-file:        LICENSE
Author:              Shea Levy
Maintainer:          shea@shealevy.com
Category:            Distribution
Build-type:          Simple
Cabal-version:       >=1.2

Source-Repository head
  Type:              git
  Location:          git://github.com/shlevy/xcode-types.git

Library
  Build-Depends:     base, filepath
  hs-source-dirs:    src
  Ghc-Options:       -Wall
  Exposed-Modules:   Xcode.PBX.Project
                     Xcode.PBX.Target
                     Xcode.PBX.Group
                     Xcode.Region

